--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=devide-width, initial-scale=1">
         <title>Language Website</title>
+        <link rel="stylesheet" type="text/css" href="/dist/styles.css" />
     </head>
 
     <body>
